# connectors

./: .claude  .dockerignore  .gitcommitizen  .gitignore  .release-please-manifest.json  .syncpackrc.json  .zed  AGENTS.md  CLAUDE.md  DEVELOP.md  DEVELOPMENT.md  Dockerfile  Makefile  README.md  SECURITY.md  biome.json  connectors.code-workspace  create-test-attachments.sh  docker-compose.yaml  down.sh  draft-issue  flake.nix  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  postman_create_sharepoint_list.json  recovered-confluence-multi-root.code-workspace  release-please-config.json  rfq-search-issue  turbo.json  up.sh  version-bump.sh  vitest.config.ts
.github/: CODEOWNERS  dependabot.yml
.github/configs/: ct-install.yaml  ct-lint-edgar-mcp.yaml  (+2 more)
scripts/: helm-package-push.ts  lint.sh  render-values-schema.sh  setup-cluster.sh
services/edgar-mcp/: .env.example  pyproject.toml  pyrightconfig.json
services/edgar-mcp/deploy/: Dockerfile
services/edgar-mcp/deploy/helm-charts/: render.sh
services/edgar-mcp/deploy/helm-charts/edgar-mcp/: Chart.yaml  values.schema.json  values.yaml
services/edgar-mcp/deploy/terraform/azure/edgar-mcp-secrets/: README.md  outputs.tf  variables.tf
services/edgar-mcp/src/edgar_mcp/: app.py  config.py  handlers.py  lifespan.py  logging.py  main.py  metrics.py  middleware.py
services/edgar-mcp/src/edgar_mcp/api/: probes.py
services/edgar-mcp/src/edgar_mcp/db/: engine.py
services/edgar-mcp/src/edgar_mcp/queue/: connection.py  consumer.py  events.py  publisher.py
services/edgar-mcp/tests/: test_config.py  test_database.py  test_logging.py  test_metrics.py  test_probes.py  test_queue.py
services/python/sparse-embedding/: README.md  generate-proto.py  main.py  pyproject.toml
services/python/sparse-embedding/app/: model_manager.py
services/python/sparse-embedding/app/activities/: __init__.py  embed_sparse.py
services/python/sparse-embedding/app/config/: __init__.py
(+2754 files in other folders)
